# OculusTest

./: .gitignore  CMakeLists.txt  FindOVR.cmake  FindVulkan.cmake  OculusTest.bin.cbp  OculusTest.bin.layout  OculusTest.sln  OculusTestN  test.cpp
OculusTest/: CMakeLists.txt  Camera.h  Display.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  LegoBrick.cpp  LegoBrick.h  MemoryManager.cpp  MemoryManager.h  ModelInstance.h  NormalCamera.cpp  NormalCamera.h  NormalDisplay.cpp  NormalDisplay.h  NormalRenderingTarget.cpp  NormalRenderingTarget.h  NullVR.h  Oculus.cpp  Oculus.h  OculusCamera.cpp  OculusCamera.h  OculusDisplay.cpp  OculusDisplay.h  OculusRenderingTarget.cpp  OculusRenderingTarget.h  OculusTest.vcxproj  OculusTest.vcxproj.filters  RenderingTarget.h  Scene.cpp  Scene.h  framentShader.txt  main.cpp  normalMain.cpp  oculusMain.cpp
include/: Camera.h  DefaultCamera.h  Display.h  Engine.h  InputManager.h  MemoryManager.h  Model.h  ModelInstance.h  NormalCamera.h  NormalDisplay.h  NormalRenderer.h  NormalRenderingTarget.h  Oculus.h  OculusCamera.h  OculusDisplay.h  OculusRenderingTarget.h  Renderer.h  RenderingTarget.h  Scene.h  VR.h
shaders/: frag.frag  frag.spv  frag_150.frag  vert.spv  vert.vert  vert_150.vert
src/: Engine.cpp  InputManager.cpp  LegoBrick.cpp  MemoryManager.cpp  ModelInstance.cpp  NormalCamera.cpp  NormalDisplay.cpp  NormalRenderer.cpp  NormalRenderingTarget.cpp  Oculus.cpp  OculusCamera.cpp  OculusDisplay.cpp  OculusRenderingTarget.cpp  Scene.cpp  normalMain.cpp  oculusMain.cpp  vulkanMain.cpp
src/vulkan/: VulkanCamera.cpp  VulkanCamera.h  VulkanCommands.cpp  VulkanCommands.h  VulkanContext.cpp  VulkanContext.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDisplay.cpp  VulkanDisplay.h  VulkanFwd.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderingTarget.cpp  VulkanRenderingTarget.h  VulkanUtils.h
